k8s-configs/ping-cloud/base/pingfederate/standalone/deployment.yaml
# This defines the pingfederate deployment.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingfederate
spec:
  replicas: 1
  template:
    metadata:
      name: pingfederate
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccount: ping-serviceaccount
      containers:
      - name: pingfederate
        # FIXME: switch to stable image before GA
        image: pingidentity/pingfederate:edge
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "2Gi"
            cpu: "1"
        volumeMounts:
        # FIXME: fix home directory when containers run as non-root user
        - name: ssh-dir
          mountPath: /root/.ssh
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: pingfederate-license
          mountPath: /opt/in/instance/server/default/conf/pingfederate.lic
          subPath: pingfederate.lic
        - name: pingfederate-jwk
          mountPath: /opt/in/instance/server/default/data/pf.jwk
          subPath: pf.jwk
        readinessProbe:
          exec:
            command: [ liveness.sh ]
          periodSeconds: 30
          failureThreshold: 10
        livenessProbe:
          exec:
            command: [ liveness.sh ]
          periodSeconds: 30
          failureThreshold: 10
        ports:
        - containerPort: 9999
          name: pf-admin
        - containerPort: 9031
          name: pf-runtime
      volumes:
      - name: ssh-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: pf-init
        configMap:
          name: pf-init
          defaultMode: 0555
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: pingfederate-license
        secret:
          secretName: pingfederate-license
          optional: true
          defaultMode: 0400
      - name: pingfederate-jwk
        secret:
          secretName: pingfederate-jwk
          optional: true
          defaultMode: 0400
