k8s-configs/ping-cloud/base/pingfederate/standalone/service.yaml
# This service exposes the pingfederate admin and runtime ports to the
# cluster.

apiVersion: v1
kind: Service
metadata:
  name: pingfederate
spec:
  ports:
  - port: 9999
    name: pingfederate-admin
  - port: 9031
    name: pingfederate-runtime
